# ProgDyn

./: CMakeLists.txt  Doxyfile  Makefile  README.md  main.c
headers/: dichotomy.h  dicothomy.h  glouton.h  knapsack.h  misc.h  pgcb.h  tests.h
sources/: dichotomy.c  dicothomy.c  glouton.c  knapsack.c  main.c  misc.c  pgcb.c  tests.c
